Bug 1514733 - RemoteWorkerController should be notified when the RemoteWorkerParent actor is dismissed, r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D26963